// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
    provider = "prisma-client-js"
}

generator dbml {
    provider   = "prisma-dbml-generator"
    output     = "../dbml"
    outputName = "postgresNest.dbml"
}

datasource db {
    provider = "postgresql"
    url      = env("DATABASE_URL")
}

enum UserType {
    CUSTOMER
    ADMIN
    STAFF
}

model User {
    id         Int      @id @default(autoincrement())
    uuid       String   @unique @default(uuid())
    created_at DateTime @default(now())
    updated_at DateTime @updatedAt

    first_name String
    last_name  String
    username   String    @unique
    password   String
    email      String    @unique
    contact    String?
    type       UserType  @default(CUSTOMER)
    customer   Customer?

    last_login DateTime?
}

model Customer {
    id         Int      @id @default(autoincrement())
    uuid       String   @unique @default(uuid())
    created_at DateTime @default(now())
    updated_at DateTime @updatedAt

    user           User?   @relation(fields: [user_id], references: [id])
    user_id        Int?    @unique
    operating_name String?
    contact        String?
    image          Image?  @relation(fields: [image_id], references: [id])
    image_id       Int?    @unique
}

model Image {
    id         Int      @id @default(autoincrement())
    uuid       String   @unique @default(uuid())
    created_at DateTime @default(now())
    updated_at DateTime @updatedAt

    file_url String?
    caption  String?
    customer Customer?
}
